--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
       <!-- Header Section Starts Here -->
-      <header>
+      <header class="header-border">
         <div class="container">
           <nav class="navbar navbar-expand navbar-light">
             <a class="navbar-brand custom-navbar-brand" href="#"><svg width="206" height="20" viewBox="0 0 206 20" fill="none" xmlns="http://www.w3.org/2000/svg">
