--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </header>
       <!-- Header Section Ends Here -->
     <!-- Search Spaces Section Starts Here -->
-    <section class="city-search-spaces-section py-4" id="city-search-section">
+    <section class="city-search-spaces-section for-padding-24" id="city-search-section">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
