--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             </div>
                         </div>
                         <div class="form-group col-xl-5 col-5 custom-control custom-switch custom-control-right text-center my-auto">
-                          <input type="checkbox" class="custom-control-input" id="customSwitch1">
+                          <input type="checkbox" class="custom-control-input" id="customSwitch1" checked>
                           <label class="custom-control-label" for="customSwitch1">MAP VIEW</label>
                         </div>
                     </div>
@@ -447,7 +447,7 @@
             <div id='map-mobile' style="height: 100%; width: 100%;"></div>
           </div>
         </div>
-            <div class="save-search-float-section d-md-none d-none mb-4">
+            <div class="save-search-float-section d-md-none d-block mb-4">
               <div class="row">
                 <div class="col-sm-7 col-12">
                   <h3>Save your search</h3>
